--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ Flask-SocketIO==4.3.1
 gevent==20.6.2
 gevent-websocket==0.10.1
 greenlet==0.4.16
+gunicorn==20.0.4
 idna==2.10
 importlib-metadata==1.7.0
 ipykernel==5.1.2
